syntax = "proto3";
option java_multiple_files = true;
package org.vietnamsea.base_proto;


enum TokenType {
    ACCESS_TOKEN = 0;
    REFRESH_TOKEN = 1;
}

message TokenRequest {
    string token = 1;
    TokenType type = 2;
}

message UserTokenResponse {
    int32 id = 1;
    string role = 2;
    string username = 3;
    bool is_active = 4;
    bool is_verified = 5;
    TokenType type = 6;
}

message TokenValidationResponse {
    bool is_valid = 1;
    UserTokenResponse user_info = 2;
    string error_message = 3;
}

service GrpcTokenService {
    rpc VerifyToken (TokenRequest) returns (TokenValidationResponse);
}